--- a/book.toml
+++ b/book.toml
@@ -3,7 +3,7 @@ authors = ["DeltaChat Contributors"]
 language = "en"
 multilingual = false
 src = "src"
-title = "webxdc"
+title = "Webxdc"
 
 [output.html]
 default-theme = "Rust"
