--- a/book.toml
+++ b/book.toml
@@ -7,6 +7,7 @@ title = "Webxdc"
 
 [output.html]
 default-theme = "Rust"
+additional-css = ["custom.css"]
 git-repository-url = "https://github.com/deltachat/webxdc_docs"
 git-repository-icon = "fa-github"
 edit-url-template = "https://github.com/deltachat/webxdc_docs/edit/master/{path}"
